# ACLTest

./: CMakeLists.txt  DeviceHandler.c  DeviceHandler.h  IncubatorHelper.c  IncubatorHelper.h  config.h  main.c  message_helper.c  message_helper.h
proto/: BirdType.pb.c  BirdType.pb.h  ChangeCurrentSessionDayHumidityMessage.pb.c  ChangeCurrentSessionDayHumidityMessage.pb.h  ChangeCurrentSessionDayParametersMessage.pb.c  ChangeCurrentSessionDayParametersMessage.pb.h  ChangeCurrentSessionDayRotationCountMessage.pb.c  ChangeCurrentSessionDayRotationCountMessage.pb.h  ChangeCurrentSessionDayTemperatureMessage.pb.c  ChangeCurrentSessionDayTemperatureMessage.pb.h  ChangeCurrentSessionDayVentillationCountMessage.pb.c  ChangeCurrentSessionDayVentillationCountMessage.pb.h  ChangeCurrentSessionDayVentillationDurationMessage.pb.c  ChangeCurrentSessionDayVentillationDurationMessage.pb.h  CriticalHumidityValueMessage.pb.c  CriticalHumidityValueMessage.pb.h  CriticalTemperatureValueMessage.pb.c  CriticalTemperatureValueMessage.pb.h  ForceRotateEggsMessage.pb.c  ForceRotateEggsMessage.pb.h  ForceVentilateIncubatorMessage.pb.c  ForceVentilateIncubatorMessage.pb.h  IncomeMessage.pb.c  IncomeMessage.pb.h  IncubationSessionCurrentHumidityMessage.pb.c  IncubationSessionCurrentHumidityMessage.pb.h  IncubationSessionCurrentTemperatureMessage.pb.c  IncubationSessionCurrentTemperatureMessage.pb.h  IncubationSessionInformationMessage.pb.c  IncubationSessionInformationMessage.pb.h  IncubatorIncomeMessagePayload.pb.c  IncubatorIncomeMessagePayload.pb.h  IncubatorOpenEventMessage.pb.c  (+25 more)
(+33 files in other folders)
